@@ -35,6 +35,17 @@ for (1..7)
 	is $dt->day_of_week, $_, "dow accessor is correct for datetime on " . $dt->strftime('%a');
 }
 
+# day of year: just test every day for two years (one leap year, one non-leap year)
+# starting with: 1 Jan 2015
+my $start = Date::Easy::Datetime->new(2015, 1, 1, 0, 0, 0);
+my $DAYS = 60 * 60 * 24;
+my @expected = (1..365, 1..366);
+foreach (0..$#expected)
+{
+	$dt = $start + $_ * $DAYS;
+	is $dt->day_of_year, $expected[$_], "day of year correct for $dt";
+}
+
 # make sure we try the full range of quarters as well
 # in this case, we'll just try every month
 my %MONTH_TO_QUARTER =
@@ -79,6 +90,15 @@ for (1..7)
 {
 	$d = Date::Easy::Date->new(2000, 1, $_ + 2);
 	is $d->day_of_week, $_, "dow accessor is correct for date on " . $d->strftime('%a');
+}
+
+# just like datetimes (see above)
+$start = Date::Easy::Date->new(2015, 1, 1);
+@expected = (1..365, 1..366);
+foreach (0..$#expected)
+{
+	$d = $start + $_;
+	is $d->day_of_year, $expected[$_], "day of year correct for $d";
 }
 
 # just like datetimes (see above)
